DL-2384: Added css files to correct colour contrasts for WCAG 2.1

--- a/public/stylesheets/focus.css
+++ b/public/stylesheets/focus.css
@@ -20,11 +20,11 @@ select:focus,
     outline-color: #fd0;
 }
 
-.button {
+.button, .button--secondary {
     border: 2px solid transparent;
 }
 
-.button:focus:not(:active):not(:hover) {
+.button:focus, .button--secondary:focus:not(:active):not(:hover) {
     border-color: #fd0;
     color: #0b0c0c;
     background-color: #fd0;
@@ -33,7 +33,7 @@ select:focus,
     outline: 3px solid transparent;
 }
 
-.button:focus {
+.button:focus, .button--secondary:focus {
     border-color: #fd0;
     outline: 3px solid transparent;
     -webkit-box-shadow: inset 0 0 0 1px #fd0;
