--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 a.banner-links {
-    color: #0B0B0B;
+    color: #0b0b0b;
 }
 
 button {
